// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge – gray, filled, lg 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-sm border-transparent bg-gray-100 text-gray-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – gray, filled, md 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-xs border-transparent bg-gray-100 text-gray-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – gray, filled, undefined 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-xs border-transparent bg-gray-100 text-gray-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – gray, outline, lg 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-sm border-gray-300 bg-transparent text-gray-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – gray, outline, md 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-xs border-gray-300 bg-transparent text-gray-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – gray, outline, undefined 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-xs border-gray-300 bg-transparent text-gray-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – gray, undefined, lg 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-sm border-transparent bg-gray-100 text-gray-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – gray, undefined, md 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-xs border-transparent bg-gray-100 text-gray-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – gray, undefined, undefined 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-xs border-transparent bg-gray-100 text-gray-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – green, filled, lg 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-sm border-transparent bg-green-100 text-green-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – green, filled, md 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-xs border-transparent bg-green-100 text-green-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – green, filled, undefined 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-xs border-transparent bg-green-100 text-green-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – green, outline, lg 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-sm border-green-300 bg-transparent text-green-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – green, outline, md 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-xs border-green-300 bg-transparent text-green-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – green, outline, undefined 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-xs border-green-300 bg-transparent text-green-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – green, undefined, lg 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-sm border-transparent bg-green-100 text-green-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – green, undefined, md 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-xs border-transparent bg-green-100 text-green-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – green, undefined, undefined 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-xs border-transparent bg-green-100 text-green-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – purple, filled, lg 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-sm border-transparent bg-violet-100 text-violet-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – purple, filled, md 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-xs border-transparent bg-violet-100 text-violet-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – purple, filled, undefined 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-xs border-transparent bg-violet-100 text-violet-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – purple, outline, lg 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-sm border-violet-300 bg-transparent text-violet-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – purple, outline, md 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-xs border-violet-300 bg-transparent text-violet-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – purple, outline, undefined 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-xs border-violet-300 bg-transparent text-violet-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – purple, undefined, lg 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-sm border-transparent bg-violet-100 text-violet-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – purple, undefined, md 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-xs border-transparent bg-violet-100 text-violet-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – purple, undefined, undefined 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-xs border-transparent bg-violet-100 text-violet-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – red, filled, lg 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-sm border-transparent bg-red-100 text-red-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – red, filled, md 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-xs border-transparent bg-red-100 text-red-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – red, filled, undefined 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-xs border-transparent bg-red-100 text-red-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – red, outline, lg 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-sm border-red-300 bg-transparent text-red-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – red, outline, md 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-xs border-red-300 bg-transparent text-red-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – red, outline, undefined 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-xs border-red-300 bg-transparent text-red-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – red, undefined, lg 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-sm border-transparent bg-red-100 text-red-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – red, undefined, md 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-xs border-transparent bg-red-100 text-red-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – red, undefined, undefined 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-xs border-transparent bg-red-100 text-red-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – undefined, filled, lg 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-sm border-transparent bg-gray-100 text-gray-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – undefined, filled, md 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-xs border-transparent bg-gray-100 text-gray-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – undefined, filled, undefined 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-xs border-transparent bg-gray-100 text-gray-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – undefined, outline, lg 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-sm border-gray-300 bg-transparent text-gray-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – undefined, outline, md 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-xs border-gray-300 bg-transparent text-gray-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – undefined, outline, undefined 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-xs border-gray-300 bg-transparent text-gray-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – undefined, undefined, lg 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-sm border-transparent bg-gray-100 text-gray-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – undefined, undefined, md 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-xs border-transparent bg-gray-100 text-gray-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;

exports[`Badge – undefined, undefined, undefined 1`] = `
<DocumentFragment>
  <span
    class="border uppercase font-semibold py-0.5 px-1.5 rounded text-xs border-transparent bg-gray-100 text-gray-600 "
  >
    Badge Text
  </span>
</DocumentFragment>
`;
